qr code generator index file updated

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shotcut icon" href="https://us.123rf.com/450wm/sergio77/sergio771311/sergio77131100756/23967133-letter-of-the-alphabet.jpg?ver=6">
+    <link rel="stylesheet" href="style.css">
     <title>QR Code Generator</title>
 </head>
 <body>
